--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
+    "@expo/metro-runtime": "~3.2.3",
+    "@gluestack-ui/alert": "^0.1.15",
     "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/icon": "^0.1.22",
     "@gluestack-ui/nativewind-utils": "^1.0.24",
     "@gluestack-ui/overlay": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.7",
@@ -19,9 +22,11 @@
     "expo-status-bar": "~1.12.1",
     "nativewind": "4.0.36",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "^3.15.3",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.12"
   },
   "devDependencies": {
